--- a/src/DataStructures.Demo/DataStructures.Demo.csproj
+++ b/src/DataStructures.Demo/DataStructures.Demo.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DataStructures\DataStructures.csproj" />
+    <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
